# irt-erp-frappe-v1

./: .git-credentials-helper.txt  .gitignore  BENCH_UPDATE_FIX.md  GIT_TRACKING_SETUP.md  Procfile  README.md  bench-update-safe.sh  check_demo_data.py  dump.rdb  fix_bench_update.sh  fix_bench_update_pull.sh  generate_additional_demo_data.py  generate_demo_data.py  generate_hrms_demo.py  github_token_setup.sh  patches.txt  push_to_github.sh  setup_github_ssh.sh  update_workaround.sh
apps/irt_ui/: FOLDER_STRUCTURE_COMPLETE.md  README.md  README_ASSET_SYNC.md  UI_CUSTOMIZATION_PLAN.md  pyproject.toml
apps/irt_ui/irt_ui/: boot.py  hooks.py  modules.txt
apps/irt_ui/irt_ui/api/: role_sidebar.py
apps/irt_ui/irt_ui/build_utils/: __init__.py  asset_sync.js
apps/irt_ui/irt_ui/commands/: __init__.py  sync_assets.py
apps/irt_ui/irt_ui/irt_ui/doctype/irt_role_sidebar/: irt_role_sidebar.js  irt_role_sidebar.json  irt_role_sidebar.py
apps/irt_ui/irt_ui/irt_ui/doctype/irt_role_sidebar_item/: irt_role_sidebar_item.json  irt_role_sidebar_item.py
apps/irt_ui/irt_ui/irt_ui/doctype/irt_theme_settings/: README.md  irt_theme_settings.js  irt_theme_settings.json  irt_theme_settings.py
apps/irt_ui/irt_ui/irt_ui/page/role_sidebar_builder/: role_sidebar_builder.js
apps/irt_ui/irt_ui/public/css/custom/: README.md  STRUCTURE.md  dropdown-fix.css  login.css  main.css  role_sidebar.css  sidebar.css  variables.css
apps/irt_ui/irt_ui/public/js/custom/: login.js  role_sidebar.js  sidebar.js  theme-settings.js
apps/irt_ui/irt_ui/startup/: boot.py
config/: redis_cache.conf  (+1 more)
(+179 files in other folders)
